# wiggum

./: .gitignore  CLAUDE.md  LICENSE  LOOP-PROMPT.md  README.md  TASKS.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml  test.yml
docs/: architecture.md  design-decisions.md  testing.md
specs/: clean-command.md  upgrade-command.md
src/ralph_loop/: cli.py
src/wiggum/: __init__.py  __main__.py  agents.py  agents_claude.py  agents_codex.py  agents_gemini.py  changelog.py  cli.py  config.py  learning.py  parsing.py  runner.py  tasks.py  upgrade.py
templates/: LOOP-PROMPT.md  META-PROMPT.md  TASKS.md
tests/: __init__.py  test_add_command.py  test_changelog_command.py  test_clean_command.py  test_git_workflow.py  test_init_security.py  test_learning.py  test_logging.py  test_module_structure.py  test_progress_tracking.py  test_prompt_option_removal.py  test_readme_accuracy.py  test_runtime_overrides.py  test_stop_conditions.py  test_suggest_command.py  test_tasks_format.py  test_tasks_in_loop_prompt.py  test_upgrade_command.py
tests/agents/: test_agent_protocol.py  test_agents.py  test_claude_agent.py  test_cli_uses_agent.py  test_codex_agent.py  test_gemini_agent.py
tests/config/: test_agent_config.py  test_config.py  test_config_file_name.py  test_loop_config.py  test_output_config.py  test_session_config.py
tests/docs/: test_wiggum_naming.py
tests/init/: test_agent_agnostic_templates.py  test_init_default_config.py  test_init_security.py  test_init_update_tasks.py  test_metaprompt_constraints.py  (+1 more)
(+17 files in other folders)
